# AITK-521-answers-with-several-pubs

./: README.md  app.py  pyproject.toml  queries_testing.py  requirements.txt
data/: config.json  exp_supp_queries.csv
results/: .~lock.exp_supp_testing_240410.csv#  exp_supp_testing_240410.csv  exp_supp_testing_pubs240411.csv  exp_supp_testing_pubs240411.xlsx
src/: classifiers_sbert_only.py  config.py  start.py  storage.py
