[tool.poetry]
name = "answers-with-several-pubs"
version = "0.1.0"
description = ""
authors = ["nichnikov <a.nichnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "2.11.1"
python-dotenv = "1.0.1"
pandas = "2.2.0"
pymystem3 = "^0.2.0"
scikit-learn = "^1.4.2"
elasticsearch = "^8.13.0"
pydantic = "1.10.14"
aiohttp = "3.9.3"
uvicorn = "0.27.1"
fastapi = "0.109.2"
fastapi-utils = "0.2.1"
urllib3 = "2.2.1"
sentence-transformers = "2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
